IDP-1595 Teach Plugin Installer to use the IdP's property Initializer
https://issues.shibboleth.net/jira/browse/IDP-1595