@@ -20,7 +20,6 @@ package net.shibboleth.idp.installer.plugin;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.security.Security;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -35,6 +34,9 @@ import org.bouncycastle.jce.provider.BouncyCastleProvider;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.BeansException;
+import org.springframework.context.ApplicationContextInitializer;
+import org.springframework.context.ConfigurableApplicationContext;
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.Resource;
 
 import net.shibboleth.ext.spring.cli.AbstractCommandLine;
@@ -44,6 +46,7 @@ import net.shibboleth.idp.plugin.PluginDescription;
 import net.shibboleth.idp.plugin.PluginVersion;
 import net.shibboleth.idp.plugin.impl.PluginState;
 import net.shibboleth.idp.plugin.impl.PluginState.VersionInfo;
+import net.shibboleth.idp.spring.IdPPropertiesApplicationContextInitializer;
 import net.shibboleth.utilities.java.support.component.ComponentInitializationException;
 import net.shibboleth.utilities.java.support.primitive.StringSupport;
 
@@ -68,6 +71,8 @@ public final class PluginInstallerCLI extends AbstractCommandLine<PluginInstalle
      * Constrained Constructor.
      */
     private PluginInstallerCLI() {
+        setIdpHome(StringSupport.trimOrNull(System.getProperty("net.shibboleth.idp.cli.idp.home")));
+        setContextInitializer(this.new Initializer());
     }
 
     /** Set where the IdP is installed to.
@@ -117,9 +122,8 @@ public final class PluginInstallerCLI extends AbstractCommandLine<PluginInstalle
     
     /** {@inheritDoc} */
     protected List<Resource> getAdditionalSpringResources() {
-        return Collections.emptyList();
-        // return List.of(
-        //        new ClassPathResource("net/shibboleth/idp/conf/http-client.xml"));
+        return List.of(
+               new ClassPathResource("net/shibboleth/idp/conf/http-client.xml"));
     }
     
     /** {@inheritDoc} */
@@ -257,12 +261,10 @@ public final class PluginInstallerCLI extends AbstractCommandLine<PluginInstalle
      */
     public static int runMain(@Nonnull final String[] args) {
         final PluginInstallerCLI cli = new PluginInstallerCLI();
-        cli.setIdpHome(StringSupport.trimOrNull(System.getProperty("net.shibboleth.idp.cli.idp.home")));
         if (cli.getIdpHome() == null) {
             return RC_INIT;
-        } else {
-            return cli.run(args);
         }
+        return cli.run(args);
     }
     
     /**
@@ -271,5 +273,22 @@ public final class PluginInstallerCLI extends AbstractCommandLine<PluginInstalle
      */
     public static void main(@Nonnull final String[] args) {
         System.exit(runMain(args));
+    }
+
+    /**
+     * An {@link ApplicationContextInitializer} which knows about our idp.home.
+     */
+    private class Initializer extends IdPPropertiesApplicationContextInitializer {
+
+        /** {@inheritDoc} */
+        @Override @Nonnull public String selectSearchLocation(
+                @Nonnull final ConfigurableApplicationContext applicationContext) {
+            return idpHome.toString();
+        }
+
+        /** {@inheritDoc} */
+        @Override @Nonnull public String getSearchLocation() {
+            return idpHome.toString();
+        }
     }
 }
